plugins {
    id 'java'
    id 'jacoco'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0' // Обновлено до 0.1.0
}

javafx {
    version = "17"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

group = 'ru.nsu.rebrin'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'javax.json:javax.json-api:1.1.4'
    implementation 'org.glassfish:javax.json:1.1.4'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.testfx:testfx-junit5:4.0.17' // Обновлено
    testImplementation 'org.testfx:testfx-core:4.0.17'  // Обновлено
    testImplementation 'org.testfx:openjfx-monocle:17.0.10'
}

test {
    useJUnitPlatform()
    jvmArgs = [
            '--add-modules', 'javafx.controls,javafx.fxml',
            '-Dtestfx.headless=true',
            '-Dglass.platform=Monocle',
            '-Dmonocle.platform=Headless',
            '-Dtestfx.verbose=true',
            '-Dprism.verbose=true'
    ]
    testLogging {
        events "PASSED", "FAILED", "SKIPPED"
        showExceptions true
        showStackTraces true
        exceptionFormat "FULL"
    }
}

application {
    mainClass = 'ru.nsu.rebrin.SnakeController'
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}